<resources>
    <string name="app_name">MEET</string>
    <string name="welcome">茫茫人海遇见你</string>
    <string name="text_guide_skip">跳过</string>
    <string name="text_guide_pager_1">每个人都是一座孤岛</string>
    <string name="text_guide_pager_2">做自己的阳光</string>
    <string name="text_guide_pager_3">你微笑时很美</string>
    <string name="text_login_phone">账号/手机号码</string>
    <string name="text_login_code">验证码</string>
    <string name="text_login_send">发送</string>
    <string name="text_login_login">登陆</string>
    <string name="text_login_agreement_1">请阅读</string>
    <string name="text_login_agreement_2">用户协议</string>
    <string name="text_login_password">密码</string>
    <string name="text_login_phone_null">竟敢不填手机号码</string>
    <string name="text_login_code_null" >竟敢不填验证码</string>
    <string name="text_main_star">星球</string>
    <string name="text_main_square">广场</string>
    <string name="text_main_chat">聊天</string>
    <string name="text_main_me">我的</string>
    <string name="chat">聊天</string>
    <string name="Me">我的</string>
    <string name="Square">广场</string>
    <string name="text_mian_dialog_text1">你来啦</string>
    <string name="text_mian_dialog_text2">第一次用？</string>
    <string name="text_mian_dialog_text3">填资料叭</string>
    <string name="text_upload_photo_title">上传头像</string>
    <string name="text_upload_nickname_title">一个名字 一个故事</string>
    <string name="text_upload_nickname">昵称</string>
    <string name="text_upload_done">完成</string>
    <string name="text_upload_photo_loding">上传</string>
    <string name="text_dialog_camera">相机</string>
    <string name="text_dialog_ablum">相册</string>
    <string name="text_dialog_cancel">返回</string>
    <string name="text_add_friend_contact">从通讯录导入好友</string>
    <string name="text_add_friend_no_me">别找自己</string>
    <string name="text_me_item_title_1">个人信息</string>
    <string name="text_me_item_title_3">新朋友</string>
    <string name="text_me_item_title_4">隐私设置</string>
    <string name="text_me_item_title_5">分享</string>
    <string name="text_me_item_title_6">设置</string>
    <string name="text_user_add_friend">添加好友</string>
    <string name="text_user_chat">聊天</string>
    <string name="text_user_audio_chat">语音电话</string>
    <string name="text_user_video_chat">视频通话</string>
    <string name="text_search_age">岁</string>
    <string name="text_add_friend_title">结果</string>
    <string name="text_add_friend_content">tuijian</string>
    <string name="text_me_info_sex">性别</string>
    <string name="text_me_info_age">年龄</string>
    <string name="text_me_info_birthday">生日</string>
    <string name="text_me_info_hobby">爱好</string>
    <string name="text_me_info_constellation">星座</string>
    <string name="text_me_info_status">单身状态</string>
    <string name="text_me_info_boy">男</string>
    <string name="text_me_info_girl">女</string>
    <string name="sexss">性别 男/女</string>
    <string name="xingzuo">星座</string>
    <string name="age">年龄</string>
    <string name="hobby">爱好</string>
    <string name="dialog_add_firend_title">好友申请</string>
    <string name="dialog_add_firend_msg">验证消息</string>
    <string name="dialog_add_firend_cancel">返回</string>
    <string name="dialog_add_firend_add">添加</string>
    <string name="text_user_info_add_friend">Add a friend！</string>
    <string name="text_new_friend_agree">已同意</string>
    <string name="text_new_friend_no_agree">已拒绝</string>
    <string name="text_chat_tab_title_1">聊天记录</string>
    <string name="text_chat_tab_title_2">通话记录</string>
    <string name="text_chat_tab_title_3">全部好友</string>
    <string name="text_chat_record_img">[图片]</string>
    <string name="text_chat_record_location">[位置]</string>
    <string name="text_chat_record_audio">[语音]</string>
    <string name="text_chat_record_video">[视频]</string>

    <string name="text_call_record_un_answer">[Did the phone]</string>
    <string name="text_chat_record_dial">[Have the phone]</string>
    <string name="text_chat_record_answer">[answer the phone]</string>
    <string name="text_all_friend_desc">个性签名</string>


</resources>